# i2cdriver

./: .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.md  testall
.github/workflows/: ci.yml
c/: go
c/common/: i2cdriver.c  i2cdriver.h
c/linux/: Makefile  Makefile.clang  i2c.c
c/win32/: Makefile  i2c.c
firmware/: README.md  capture.fs  font.fs  fontsize.fs  main.fs  st7735.fs
firmware/assets/: go  mkfont.py
hardware/: i2cdriver.brd  i2cdriver.sch
nsis/: go.bat  i2cdriver.nsi  license.txt
python/: .gitignore  EDS.py  MANIFEST  Makefile.sphinx  bargraph.py  conf.py  go  i2cdriver.py  index.rst  lm75b.py  setup.py
python/docs/: conf.py  go  index.rst
python/samples/: EDS-BEEP.py  EDS-CLOCK.py  EDS-DIG2.py  EDS-LED.py  EDS-MAGNET.py  EDS-POT.py  EDS-REMOTE.py  EDS-color-compass.py  EDS-egg-timer.py  EDS-take-a-ticket.py  bargraph.py  bno080.py  capture.py  go  ht16k33.py  i2cgui.py  lcd1602.py  mag3110.py  oled.py  pca9685.py  qwiic-joystick.py  qwiic-keypad.py  read-temperature.py  touch.py  wii.py
python/tests/: accept.py
python3/: .gitignore  EDS.py  README.md  go  i2cdriver.py  pyproject.toml
python3/samples/: EDS-ACCEL.py  EDS-CLOCK.py  EDS-EPROM.py  EDS-POT.py  EDS-TEMP.py  EDS-take-a-ticket.py  bmp390.py  i2cgui.py  lcd1602.py  led8x8.py  mux.py  tcr.py
